--- a/public/index.html
+++ b/public/index.html
@@ -1,2 +1,5 @@
-<div id="root"></div>
-<script src="bundle.js"></script>
+<body>
+  <div id="root"></div>
+  <script src="bundle.js"></script>  
+</body>
+
